option java_outer_classname = "LCGetDictDataRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

import "csharp_options.proto"; 
option (google.protobuf.csharp_file_options).namespace = "AeroCloud.Protocol"; 

import "core/proto/dataaccess/common/net/DictData.proto";

message GetDictDataRes{
	repeated DictData datas = 1;
}